<resources>
    <string name="app_name">Radix converter app</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="convert_to">convert to</string>
    <string name="convert">Convert</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="hexadecimal">Hexadecimal</string>
    <!--<string-array name="planets_array">
        <item>Binary</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
    </string-array>-->
    <string name="result">Result</string>
    <string name="background">Background</string>
    <string name="copy_to_cliboard">Copy To Cliboard</string>
    <string name="_0_button">0 Button</string>
    <string name="_1_button">1 Button</string>
    <string name="_2_button">2 Button</string>
    <string name="_3_button">3 Button</string>
    <string name="_4_button">4 Button</string>
    <string name="_5_button">5 Button</string>
    <string name="_6_button">6 Button</string>
    <string name="_7_button">7 Button</string>
    <string name="_8_button">8 Button</string>
    <string name="_9_button">9 Button</string>
    <string name="a_button">A Button</string>
    <string name="b_button">B Button</string>
    <string name="c_button">C Button</string>
    <string name="d_button">D Button</string>
    <string name="e_button">E Button</string>
    <string name="f_button">F Button</string>
    <string name="clear_button">Clear Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="converter">Converter</string>
    <string name="octal">Octal</string>
    <string name="hex">Hex</string>
    <string name="oct">Oct</string>
    <string name="bin">Bin</string>
    <string name="dec">Dec</string>
    <string name="paste_from_clipboard">Paste from Clipboard</string>
    <string name="paste">Paste</string>
</resources>