<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_page_001" />


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_button_white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:backgroundTintMode="screen"
                    android:gravity="center"
                    android:hint="@string/enter_the_number"
                    android:minHeight="50dp"
                    android:paddingHorizontal="25dp"
                    android:paddingStart="45dp"
                    android:text=""
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/buttonColor"
                    android:textSize="24sp"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".2"
                    android:contentDescription="@string/paste_from_clipboard"
                    android:gravity="center"
                    android:onClick="copyToClipboard1"
                    android:text="@string/paste"
                    android:textColor="@color/buttonColor"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/fromSpinner"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autofillHints="From"
                    android:background="@drawable/rounded_button_white"
                    android:gravity="center"
                    />

                <!--<TextView
                    android:id="@+id/fromSystem"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_white"
                    android:gravity="center"
                    android:onClick="fromSys"
                    android:text=""
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />-->

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/convert_to"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/right_arrow" />

                <!--<TextView
                    android:id="@+id/toSystem"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_white"
                    android:gravity="center"
                    android:onClick="toSys"
                    android:text=""
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />-->

                <Spinner
                    android:id="@+id/toSpinner"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autofillHints="To"
                    android:background="@drawable/rounded_button_white"
                    android:gravity="center"/>

            </LinearLayout>


            <Button
                android:id="@+id/convert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/buttonColor"
                android:hapticFeedbackEnabled="true"
                android:onClick="convert"
                android:padding="10dp"
                android:shadowColor="#3F51B5"
                android:text="@string/convert"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_button_white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:backgroundTintMode="screen"
                    android:gravity="center"
                    android:hint="@string/result"
                    android:minHeight="50dp"
                    android:paddingHorizontal="25dp"
                    android:paddingStart="40dp"
                    android:text=""
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/buttonColor"
                    android:textSize="24sp"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".1"
                    android:contentDescription="@string/copy_to_cliboard"
                    android:onClick="copyToClipboard2"
                    app:srcCompat="@drawable/copy_to_clipboard"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/zero"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_0_button"
                    android:onClick="getDigit"
                    android:tag="0"
                    app:srcCompat="@drawable/zero" />


                <ImageView
                    android:id="@+id/one"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_1_button"
                    android:onClick="getDigit"
                    android:tag="1"
                    app:srcCompat="@drawable/one" />

                <ImageView
                    android:id="@+id/two"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_2_button"
                    android:onClick="getDigit"
                    android:tag="2"
                    app:srcCompat="@drawable/two" />

                <ImageView
                    android:id="@+id/three"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_3_button"
                    android:onClick="getDigit"
                    android:tag="3"
                    app:srcCompat="@drawable/three" />

                <ImageView
                    android:id="@+id/four"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_4_button"
                    android:onClick="getDigit"
                    android:tag="4"
                    app:srcCompat="@drawable/four" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/five"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_5_button"
                    android:onClick="getDigit"
                    android:tag="5"
                    app:srcCompat="@drawable/five" />

                <ImageView
                    android:id="@+id/six"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_6_button"
                    android:onClick="getDigit"
                    android:tag="6"
                    app:srcCompat="@drawable/six" />

                <ImageView
                    android:id="@+id/seven"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_7_button"
                    android:onClick="getDigit"
                    android:tag="7"
                    app:srcCompat="@drawable/seven" />

                <ImageView
                    android:id="@+id/eight"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_8_button"
                    android:onClick="getDigit"
                    android:tag="8"
                    app:srcCompat="@drawable/eight" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nine"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/_9_button"
                    android:onClick="getDigit"
                    android:tag="9"
                    app:srcCompat="@drawable/nine" />

                <ImageView
                    android:id="@+id/a"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/a_button"
                    android:onClick="getDigit"
                    android:tag="A"
                    app:srcCompat="@drawable/a" />

                <ImageView
                    android:id="@+id/b"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/b_button"
                    android:onClick="getDigit"
                    android:tag="B"
                    app:srcCompat="@drawable/b" />

                <ImageView
                    android:id="@+id/c"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/c_button"
                    android:onClick="getDigit"
                    android:tag="C"
                    app:srcCompat="@drawable/c" />

                <ImageView
                    android:id="@+id/d"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/d_button"
                    android:onClick="getDigit"
                    android:tag="D"
                    app:srcCompat="@drawable/d" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/e"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/e_button"
                    android:onClick="getDigit"
                    android:tag="E"
                    app:srcCompat="@drawable/e" />

                <ImageView
                    android:id="@+id/f"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/f_button"
                    android:onClick="getDigit"
                    android:tag="F"
                    app:srcCompat="@drawable/f" />

                <ImageView
                    android:id="@+id/clear"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/clear_button"
                    android:onClick="clear"
                    android:tag="clr"
                    app:srcCompat="@drawable/clr" />

                <ImageView
                    android:id="@+id/del"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="10dp"
                    android:contentDescription="@string/delete_button"
                    android:longClickable="true"
                    android:onClick="deleteDigit"
                    android:tag="del"
                    app:srcCompat="@drawable/del" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>